# embedding-dummy

./: README.md  docker-compose.yaml  grpc_server.py  main.py  pyproject.toml  requirements.txt
fastapi_app/: Dockerfile  app.py  exceptions.py  requirements.txt  router.py  schemas.py
grpc_app/: Dockerfile  embedding_pb2_grpc.py
locusts/: grpc_client.py  locust.py
