[project]
name = "embedding-dummy"
version = "0.1.0"
description = ""
authors = [
    {name = "Hongmin",email = "nhm9001@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "grpcio (>=1.69.0,<2.0.0)",
    "grpcio-tools (>=1.69.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
